--- a/index.html
+++ b/index.html
@@ -16,50 +16,52 @@
     <div class="header-top">
       <div class="container">
         <a class="logo-main">
-          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="109" height="18" alt="Техномарт">
         </a>
-        <form action="https://echo.htmlacademy.ru" method="post">
+        <form action="https://echo.htmlacademy.ru" method="post" class="search">
           <label for="search" class="visually-hidden">Поиск</label>
           <input id="search" type="search" placeholder="Поиск">
         </form>
-        <ul>
-          <li class="top-links"><a href="#">Закладки: 0</a></li>
-          <li class="top-links basket"><a href="#">Корзина: 0</a></li>
-          <li class="top-links checkout"><a href="#">Оформить заказ</a></li>
+        <ul class="top-links">
+          <li class="top-link"><a href="#">Закладки: 0</a></li>
+          <li class="top-link basket"><a href="#">Корзина: 0</a></li>
+          <li class="top-link checkout"><a href="#">Оформить заказ</a></li>
         </ul>
       </div>
     </div>
     <div class="container">
-      <p class="description">
-        Интернет-магазин строительных материалов и инструментов для ремонта
-      </p>
-      <div class="header-address">
-        <a href="tel:+78125550555">+7(812)555-05-55</a>
-        <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+      <div class="header-middle">
+        <p class="description">
+          Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта
+        </p>
+        <div class="header-address">
+          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+        </div>
+        <div class="registration">
+          <a href="#">Войти</a>
+          <a href="#">Регистрация</a>
+        </div>
       </div>
-      <div class="registration">
-        <a href="#">Войти</a>
-        <a href="#">Регистрация</a>
-      </div>
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li class="paged nav-item"><a>Главная</a></li>
+          <li class="nav-item"><a href="#">Компания</a></li>
+          <li class="nav-item"><a href="catalog.html">Каталог</a></li>
+          <li class="nav-item"><a href="#">Новости</a></li>
+          <li class="nav-item"><a href="#">Спецпредложения</a></li>
+          <li class="nav-item"><a href="#">Доставка</a></li>
+          <li class="nav-item"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="navigation container">
-      <ul>
-        <li class="paged nav-item"><a>Главная</a></li>
-        <li class="nav-item"><a href="#">Компания</a></li>
-        <li class="nav-item"><a href="catalog.html">Каталог</a></li>
-        <li class="nav-item"><a href="#">Новости</a></li>
-        <li class="nav-item"><a href="#">Спецпредложения</a></li>
-        <li class="nav-item"><a href="#">Доставка</a></li>
-        <li class="nav-item"><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
   </header>
   <!--НАШЕ ТЕЛО-->
   <main>
     <section class="menu container">
       <h2 class="visually-hidden">Промо-блок</h2>
       <div class="menu-left">
-        <ul>
+        <ul class="menu-left-items">
           <li class="menu-item">
             <h3>Материалы</h3>
             <img src="#" alt="Новинка">
@@ -77,15 +79,17 @@
             <!--<img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">-->
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
-          <div class="slide slide-2">
+          <div class="slide slide-2 visually-hidden">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <!--<img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">-->
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
         </div>
-        <button class="btn-left" type="button"><!--<img src="img\icon-left.svg" alt="Назад">--></button>
-        <button type="btn-right"><!--<img src="img\icon-right.svg" alt="Вперед">-->Вперед</button>
+        <!-- <button class="btn-left" type="button">
+          <img src="img\icon-left.svg" alt="Назад"></button>
+        <button type="btn-right">
+          <img src="img\icon-right.svg" alt="Вперед">Вперед</button> -->
       </div>
       <ul class="menu-right">
         <li class="menu-item">
@@ -108,10 +112,10 @@
         <h2>Популярные товары:</h2>
         <a class="btn-red" href="#">Все популярные товары</a>
       </div>
-      <ul>
+      <ul class="card-items">
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
-          <p>
+          <p class="card-item-img">
             <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           </p>
           <p class="del">32500 Р.</p>
@@ -123,7 +127,7 @@
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
-          <p>
+          <p class="card-item-img">
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           </p>
           <p class="del">22500 Р.</p>
@@ -135,7 +139,7 @@
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
-          <p>
+          <p class="card-item-img">
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           </p>
           <p class="del">30500 Р.</p>
@@ -148,7 +152,7 @@
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
           <img src="#" alt="Новинка">
-          <p>
+          <p class="card-item-img">
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           </p>
           <p class="price">12500 Р.</p>
@@ -165,7 +169,7 @@
         <h2>Популярные производители:</h2>
         <a class="btn-red" href="#">Все производители</a>
       </div>
-      <ul>
+      <ul class="brand-items">
         <li class="brand-item"><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
         <li class="brand-item"><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
         <li class="brand-item"><a href="#"><img src="img\dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
@@ -191,12 +195,13 @@
             <li class="services-btn"><a href="#">Гарантия</a></li>
             <li class="services-btn"><a href="#">Кредит</a></li>
           </ul>
-          <div>
+          <div class="service-inf">
             <h3>Доставка</h3>
-            <p class="delivery text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br>
-              Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+            <p class="delivery text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно
+              бесплатно!
+              Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
           </div>
-          <div>
+          <div class="service-inf visually-hidden">
             <h3>Гарантия</h3>
             <p class="guaranty text-info">Если купленный у нас товар поломается или заискрит,
               а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей
@@ -204,7 +209,7 @@
               Мы обменяем сгоревший товар на новый.
               Дом уж восстановите как-нибудь сами.</p>
           </div>
-          <div>
+          <div class="service-inf visually-hidden">
             <h3>Кредит</h3>
             <p class="credit text-info">Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.</p>
@@ -214,14 +219,14 @@
       </div>
     </section>
     <!--СЕКЦИЯ О КОМПАНИИ И КОНТАКТЫ-->
-    <div class="container">
+    <div class="about container">
       <section class="info">
         <h2 class="text-h2">Компания "Техномарт"</h2>
         <p class="text-info">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
           Техномарт работает со многими транспортными компаниями:</p>
-        <ul>
+        <ul class="transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
@@ -232,7 +237,7 @@
         <h2 class="text-h2">Контакты</h2>
         <p class="text-info">Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <a href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
+        <a class="mini-map" href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
         <a class="btn-red" href="">Заблудились? Напишите нам!</a>
       </section>
     </div>
@@ -242,7 +247,7 @@
     <div class="container">
       <div class="footer-top">
         <a class="logo-main">
-          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="138" height="21" alt="Техномарт">
         </a>
         <ul class="footer-top-nav">
           <li><a href=" #">Компания</a></li>
@@ -267,13 +272,13 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p>2010-2017 Компания "Техномарт"<span> Все права защищены</span></p>
+        <p class="copy">&copy;2010-2017 Компания "Техномарт"<span> Все права защищены </span></p>
         <ul class="social">
           <li><a class="vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
           <li><a class="facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
           <li><a class="instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
-        <p  class="mailto">
+        <p class="mailto">
           Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
@@ -286,18 +291,26 @@
   <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
   <section class="feedback">
     <h2 class="visually-hidden">Обратная связь</h2>
-    <p>Введите свой логин и пароль.</p>
+    <!-- <p>Введите свой логин и пароль.</p> -->
     <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-      <div>
-        <label for="name">Ваше имя:</label>
-        <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      <div class="feedback-login">
+        <div>
+          <label for="name">
+            <p>Ваше имя:</p>
+          </label>
+          <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+        </div>
+        <div>
+          <label for="email">
+            <p>Ваш e-mail:</p>
+          </label>
+          <input id="email" type="email" name="email" placeholder="email@example.com">
+        </div>
       </div>
-      <div>
-        <label for="email">Ваш e-mail:</label>
-        <input id="email" type="email" name="email" placeholder="email@example.com">
-      </div>
-      <div>
-        <label for="textform">Текст письма:</label>
+      <div class="textarea">
+        <label for="textform">
+          <p>Текст письма:</p>
+        </label>
         <textarea id="textform" type="comment" name="letter" placeholder="В свободной форме"></textarea>
       </div>
       <button class="btn-red" type="submit">Отправить</button>
