--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
         </form>
         <ul class="top-links">
           <li class="top-link bookmarks"><a href="#">Закладки: 0</a></li>
-          <li class="top-link basket"><a href="#">Корзина: 0</a></li>
+          <li class="top-link basket basket-active"><a href="#">Корзина: 10</a></li>
           <li class="top-link checkout"><a href="#">Оформить заказ</a></li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="header-middle">
         <p class="description">
-          Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта
+          Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта
         </p>
         <div class="header-address">
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -191,7 +191,7 @@
           </div>
           <ul class="card-items goods">
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
@@ -201,7 +201,7 @@
               </div>
             </li>
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
@@ -212,7 +212,7 @@
             </li>
             <li class="card-item">
               <span class="new">new</span>
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
@@ -222,7 +222,7 @@
               </div>
             </li>
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
@@ -233,7 +233,7 @@
             </li>
             <li class="card-item">
               <span class="new">new</span>
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
@@ -243,7 +243,7 @@
               </div>
             </li>
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
@@ -254,7 +254,7 @@
             </li>
             <li class="card-item">
               <span class="new">new</span>
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
@@ -264,7 +264,7 @@
               </div>
             </li>
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
@@ -274,7 +274,7 @@
               </div>
             </li>
             <li class="card-item">
-              <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+              <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
@@ -350,7 +350,7 @@
       </div>
     </div>
   </footer>
-  <div class="visually-hidden">
+  <div class="popup-buy-container visually-hidden">
     <div class="popup-buy">
       <p>Товар добавлен в корзину!</p>
       <div class="popup-buy-btn">
