--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="header-middle">
         <p class="description">
-          Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта
+          Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта
         </p>
         <div class="header-address">
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -99,6 +99,8 @@
           </div>
           <button class="btn-slider btn-left" type="button"><span class="visually-hidden">Назад</span></button>
           <button class="btn-slider btn-right" type="button"><span class="visually-hidden">Вперед</span></button>
+          <button class="indicator-slider indicator-left" type="button"><span class="visually-hidden">Назад</span></button>
+          <button class="indicator-slider indicator-right indicator-active" type="button"><span class="visually-hidden">Вперед</span></button>
         </div>
       </div>
       <ul class="menu-right">
@@ -124,7 +126,7 @@
       </div>
       <ul class="card-items">
         <li class="card-item">
-          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 9000</a></h4>
           <!-- <p class="card-item-img"> -->
             <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           <!-- </p> -->
@@ -136,7 +138,7 @@
           </div>
         </li>
         <li class="card-item">
-          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <span class="del">22500 Р.</span>
           <span class="price">15500 Р.</span>
@@ -146,7 +148,7 @@
           </div>
         </li>
         <li class="card-item">
-          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <span class="del">30500 Р.</span>
           <span class="price">25500 Р.</span>
@@ -157,7 +159,7 @@
         </li>
         <li class="card-item">
           <span class="new">new</span>
-          <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
+          <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
           <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           <span class="del"></span>
           <span class="price">12500 Р.</span>
@@ -202,14 +204,14 @@
           </ul>
           <div class="service-inf delivery">
             <h3>Доставка</h3>
-            <p class="text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно
+            <p class="text-info">Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно
               бесплатно!
               Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
           </div>
           <div class="service-inf guaranty">
             <h3>Гарантия</h3>
             <p class="text-info">Если купленный у нас товар поломается или заискрит,<br>
-              а также в случае пожара, спровоцированного его возгоранием,<br> вы всегда можете быть уверены в нашей
+              а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей
               гарантии.
               Мы обменяем сгоревший товар на новый.<br>
               Дом уж восстановите как-нибудь сами.</p>
@@ -229,8 +231,8 @@
         <h2 class="text-h2">Компания &laquo;Техномарт&raquo;</h2>
         <p class="text-info">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          <span class="text-logo">Техномарт</span> работает со многими транспортными компаниями:</p>
+        <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!
+          <span class="transport-company"><span class="text-logo">Техномарт</span> работает со многими транспортными компаниями:</span></p>
         <ul class="transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -240,8 +242,7 @@
       </section>
       <section class="contacts">
         <h2 class="text-h2">Контакты</h2>
-        <p class="text-info">Вы можете забрать товар сами,<br>
-          заехав в наш офис:</p>
+        <p class="text-info">Вы можете забрать товар сами, заехав в наш офис:</p>
         <a class="mini-map" href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
         <a class="btn-red" href="">Заблудились? Напишите нам!</a>
       </section>
@@ -294,15 +295,16 @@
     </div>
   </footer>
   <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
-  <section class="feedback visually-hidden">
+  <section class="popup-feedback visually-hidden">
+    <div class="feedback">
     <h2 class="visually-hidden">Обратная связь</h2>
     <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="feedback-login">
-        <div>
+        <div class="feedback-name">
           <label for="name">Ваше имя:</label>
           <input id="name" type="text" name="name" placeholder="Имя Фамилия">
         </div>
-        <div>
+        <div class="feedback-email">
           <label for="email">Ваш e-mail:</label>
           <input id="email" type="email" name="email" placeholder="email@example.com">
         </div>
@@ -314,13 +316,19 @@
       <button class="btn-red" type="submit">Отправить</button>
     </form>
     <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
+    </div>
+    <div class="filter"></div>
   </section>
   <!--ПОПАП С КАРТОЙ-->
-  <section class="map visually-hidden">
+  <section class="popup-map">
+    <div class="map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
-    <img src="img\map-full.jpg" width="940" height="446" alt="Большая карта">
-    <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
+    <img src="img/map-full.jpg" width="940" height="446" alt="Большая карта">
+    <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
+    </div>
+    <div class="filter"></div>
   </section>
+  <script scr="js/script.js"></script>
 </body>
 
 </html>
